Alright, set xvif(4) syntax once and for all. Tested with ipf(4) under XEN3_DOM0 amd64.

Fixes PR misc/39376.

See http://mail-index.netbsd.org/port-xen/2011/04/06/msg006603.html